# cartoon

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CURRENT_STATUS.md  Makefile  PLANS.md  README.md  REPO_MAP.md  environment.yml  pyproject.toml
data/models/: models_manifest.json
data/style/: forbidden_terms.json  negative_prompt.md  style_bible.md
docs/: agent_skills.md  comfyui_smoke_checklist.md  design_review.md  review_checklist.md  seedance_real_runbook.md
src/idiom_video/: __init__.py  cli.py  comfyui_smoke.py  config.py  prompt_builder.py  quality_rules.py  real_image_preflight.py  real_video_preflight.py  review_packet.py  schemas.py  script_writer.py  seedance_cost.py  seedance_lifecycle.py  seedance_submit.py  storyboard_writer.py  video_motion_review.py  voice_builder.py
tests/: test_cli_mock_flow.py  test_comfyui_smoke_check.py  test_ffmpeg_compose.py  test_image_comfyui.py  test_image_mock.py  test_prompt_builder.py  test_quality_check_cli.py  test_quality_rules.py  test_real_image_preflight.py  test_real_video_preflight.py  test_review_packet.py  test_review_records.py  test_review_video.py  test_schemas.py  test_script_writer.py  test_seedance_client_shell.py  test_seedance_cost_estimate.py  test_seedance_mock_lifecycle.py  test_seedance_real_transport.py  test_seedance_submit.py  test_storyboard_writer.py  test_subtitle.py  test_video_mock.py  test_video_motion_review.py  test_video_seedance.py  test_voice_builder.py  test_voice_mock.py
tests/fixtures/: idiom_sample.json  storyboard_sample.json
workflows/comfyui/: README.md  (+3 more)
(+16 files in other folders)
